Fix broken errorprone config; fix warnings.