@@ -15,7 +15,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <lombok.version>1.18.30</lombok.version>
         <lombok.plugin.version>1.18.20.0</lombok.plugin.version>
-        <errorprone.version>2.24.1</errorprone.version>
+        <error-prone.version>2.24.1</error-prone.version>
         <spotless.plugin.version>2.42.0</spotless.plugin.version>
         <spotless.prettier.version>2.8.8</spotless.prettier.version>
         <spotless.prettier.plugin.version>2.2.0</spotless.prettier.plugin.version>
@@ -347,7 +347,23 @@
                     <target>${maven.compiler.target}</target>
                     <compilerArgs>
                         <arg>-XDcompilePolicy=simple</arg>
-                        <arg>-Xplugin:ErrorProne</arg>
+
+                        <!-- For ErrorProne -->
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+
+                        <arg>-Xplugin:ErrorProne
+                            -XepDisableWarningsInGeneratedCode
+                            -XepExcludedPaths:.*/generated-sources/.*
+                            -Xep:MemberName:ERROR</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
@@ -358,7 +374,7 @@
                         <path>
                             <groupId>com.google.errorprone</groupId>
                             <artifactId>error_prone_core</artifactId>
-                            <version>${errorprone.version}</version>
+                            <version>${error-prone.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
